--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,8 @@ margin-top: 70px;
 	margin-top: 20px;
 }
 .header-button {
+	display: inline-block;
+	text-decoration: none;
 box-shadow: 10px 17px 34px 6px rgba(0, 50, 130, 0.83);
 border-radius: 50px;
 background-color: #ffffff;
@@ -138,6 +140,7 @@ footer {
 	font-size: 18px;
 	border-radius: 50px;
 	padding: 15px 40px;
+	text-decoration: none;
 }
 @media (max-width: 1200px) {
 	.header-pretitle {
