--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,12 @@ font-size: 18px;
 font-weight: 700;
 padding: 17px 55px;
 margin-top: 33px;
+-webkit-transition: 0.2s;
+-o-transition: 0.2s;
+transition: 0.2s;
+}
+.header-button:hover {
+	box-shadow:none;
 }
 header small {
 	font-size: 12px;
@@ -141,6 +147,13 @@ footer {
 	border-radius: 50px;
 	padding: 15px 40px;
 	text-decoration: none;
+	-webkit-transition: 0.2s;
+	-o-transition: 0.2s;
+	transition: 0.2s;
+}
+.footer-button:hover {
+	background-color: #fff;
+	color: #3a7dfd;
 }
 @media (max-width: 1200px) {
 	.header-pretitle {
