--- a/css/style.css
+++ b/css/style.css
@@ -234,7 +234,16 @@ footer {
 }
 @media (max-width: 992px) {
 	.header-img {
-		display: none;
+		height: auto;
+		width: auto;
+		max-width: 400px;
+		min-height: 150px;
+	}
+	/*.header-img {
+		display: none;*/
+	}
+	.h1 {
+		font-size: 24px;
 	}
 	.header-pretitle-1 {
 		margin-top: 10px;
