--- a/css/style.css
+++ b/css/style.css
@@ -233,33 +233,35 @@ footer {
 	}
 }
 @media (max-width: 992px) {
-	.col-xl-5, .header-pretitle-1, {
-		font-size: 14px;
+	.col-xl-5,  {
+		font-size: 12px;
 	}
 	.header-img {
 		height: auto;
 		width: auto;
-		max-width: 350px;
-		min-height: 130px;
-		margin-top: 0px;
+		max-width: 300px;
+		min-height: 100px;
+		padding-top: 0px;
 	}
 	/*.header-img {
 		display: none;*/
 	}
-	.header-button {
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-	}
-	.header {
-		text-align: center;
-	}
 	.header-title {
 		font-size: 24px;
 		margin-top: 0px;
+		margin-bottom: 0px;
 	}
-	.header-pretitle-1 {
+	.header-pretitle-1, .header-pretitle-2, .header-subtitle {
+		font-size: 14px;
 		margin-top: 0px;
+		margin-bottom: 0px;
+	}
+	.header-hyper {
+		font-size: 14px;
+	}
+	.header-button {
+	margin-top: 10px;
+	}
 	}
 	.portfolio-title {
 		margin-top: 0px;
