--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,12 @@ img {
 	max-width: 100%;
 }
 h1 {
-	font-family: 'Play';
-	color: #ffffff;
-	padding-bottom: 10px;
-		text-shadow: #000000 2px 2px 1px;
+	font-size: 48px;
+	font-weight: 700;
+	line-height: 20.81px;
+	color: #000000;
+	padding-bottom: 15px;
+	font-family: 'Josefin Sans';
 }
 
 header {
@@ -25,16 +27,15 @@ font-size: 18px;
 text-align: left;
 padding-top: 10px;
 }
-.header-pretitle-2 {
-	padding-top: 10px;
-}
 .header-title {
-	font-size: 48px;
-	font-weight: 700;
-	line-height: 46.81px;
-	margin-top: 0px;
-	padding-top: 10px;
-	
+	padding-top: 0px;
+	line-height: 1.5;
+	padding-bottom: 0px;
+	font-family: 'Play';
+	color: #ffffff;
+	padding-bottom: 5px;
+		text-shadow: #000000 2px 2px 1px;
+		line-height: 1.5;
 }
 .header-subtitle {
 	margin-top: 20px;
